# gvolwheel

./: AUTHORS  Makefile.am  configure.ac
src/: Makefile.am  gvolwheel.h  main.c  settings.c  settings_window.c  trayicon.c  volume.c  volume_alsa.c  volume_oss.c  volume_window.c
